--- a/templates/accounts/auth.html
+++ b/templates/accounts/auth.html
@@ -8,6 +8,9 @@
     <p>{{ description}}</p>
     {%endif%}
     {% include "components/form.html" with form=form btn_label=btn_label %}
+    {% if isLogin %}
+    <div class="row mt-3 mx-auto"><p>Don't have an account yet?&nbsp;</p><a href="/register">Register!</a></div>
+    {% endif%}
 
 </div>
 {% endblock content %}
