Final with comments

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -7,11 +7,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home </a>
+          <a class="nav-link" href="/alltweets">All tweets</a>
         </li>
         {% if request.user.is_authenticated %}
           <li class="nav-item active">
-            <a class="nav-link" href="/alltweets">All tweets</span></a>
+            <a class="nav-link" href="/">Feed</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
